--- a/client/durandaltest/src/App.css
+++ b/client/durandaltest/src/App.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: #EECE94;
+  background-color: #F0EBEB;
 }
 
 .Auth-form-container {
@@ -12,6 +12,7 @@ body {
   align-items: center;
   width: 100vw;
   height: 100vh;
+  color: whitesmoke;
 }
 
 .Auth-form {
@@ -20,7 +21,7 @@ body {
   padding-top: 30px;
   padding-bottom: 20px;
   border-radius: 8px;
-  background-color: #EBB34B;
+  background-color: #6F706E;
 }
 
 .Auth-form-content {
@@ -32,26 +33,26 @@ body {
   text-align: center;
   margin-bottom: 1em;
   font-size: 24px;
-  color: rgb(34, 34, 34);
+  color: black;
   font-weight: 800;
 }
 
 .Auth-links {
-  color: purple;
+  color: #7A0A00;
   pointer-events: all;
   font-weight: bold;
 }
 
 #Auth-button {
-  background-color: purple;
+  background-color: #7A0A00;
   border: none;
   font-weight: bold;
 }
 
-label {
+.form_input_labels {
   font-size: 14px;
   font-weight: 600;
-  color: rgb(34, 34, 34);
+  color: #171716;
 }
 
 
