--- a/client/durandaltest/src/App.css
+++ b/client/durandaltest/src/App.css
@@ -5,6 +5,14 @@ body {
   height: 100%;
 }
 
+#nav-dropdown-dark-example {
+  margin-left: 30px;
+}
+
+#logout-button {
+  margin-left: 700px;
+}
+
 /* Login CSS */
 
 .Auth-form-container {
