Login frontend with design

--- a/client/durandaltest/src/SCSS/Elements/_footer.scss
+++ b/client/durandaltest/src/SCSS/Elements/_footer.scss
@@ -9,5 +9,7 @@
         width: 100%;
         height: 30px;
         text-align: center;
+        font-family: $general-font;
+        font-size: 13px;
     }
 }
