--- a/client/durandaltest/src/SCSS/Elements/_footer.scss
+++ b/client/durandaltest/src/SCSS/Elements/_footer.scss
@@ -1,15 +1,18 @@
 @import "../_variables.scss";
 
-#login-page {
-    footer {
-        background-color: $footer_bg_color;
-        color: $footer_font_color;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        height: 30px;
-        text-align: center;
+footer {
+    background-color: $footer_bg_color;
+    
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    
+    
+    span {
         font-family: $general-font;
         font-size: 13px;
+        color: $footer_font_color;
     }
 }
