--- a/client/durandaltest/src/SCSS/_variables.scss
+++ b/client/durandaltest/src/SCSS/_variables.scss
@@ -11,6 +11,9 @@
 $red-dabi: #dc1f0f;
 $gray-dabi: #4a4a4a;
 
+$primary-bars-color: #FFFFFF;
+$background: #F5F6F8;
+
 /* || LOGIN */
 $primary-background: #F6F5F7;
 $overlay-background: $gray-dabi;
