Datatables with design (axios + MUI)

--- a/client/durandaltest/src/SCSS/_variables.scss
+++ b/client/durandaltest/src/SCSS/_variables.scss
@@ -10,9 +10,11 @@
 
 $red-dabi: #dc1f0f;
 $gray-dabi: #4a4a4a;
+$background: #F5F6F8;
 
 $primary-bars-color: #FFFFFF;
-$background: #F5F6F8;
+
+$table-header: $background;
 
 /* || LOGIN */
 $primary-background: #F6F5F7;
