--- a/client/durandaltest/src/SCSS/Components/_datatable.scss
+++ b/client/durandaltest/src/SCSS/Components/_datatable.scss
@@ -20,19 +20,11 @@
         align-items: center;
         gap: 25px;
 
-        .viewButton {
+        .vieweditButton {
             padding: 2px 5px;
             border-radius: 5px;
             color: darkblue;
             border: 1px dotted rgba(0,0,139,0.596);
-            cursor: pointer;
-        }
-
-        .editButton {
-            padding: 2px 5px;
-            border-radius: 5px;
-            color: darkorange;
-            border: 1px dotted rgba(139, 83, 0, 0.596);
             cursor: pointer;
         }
 
