--- a/client/durandaltest/src/SCSS/Components/_navbar.scss
+++ b/client/durandaltest/src/SCSS/Components/_navbar.scss
@@ -42,6 +42,11 @@
                 margin-right: 20px;
                 position: relative;
 
+                span {
+                    margin-right: 10px;
+                    font-weight: 800;
+                }
+
                 .icon {
                     font-size: 20px;
                     margin-right: 5px;
