Modal frontend for Clients, Users and Agents init

--- a/client/durandaltest/src/SCSS/Components/_datatable.scss
+++ b/client/durandaltest/src/SCSS/Components/_datatable.scss
@@ -11,6 +11,24 @@
         font-size: larger;
     }
 
+    .add-button {
+        width: 100px;
+        height: 30px;
+        border: none;
+        color: white;
+        border-radius: 20px;
+        background-color: $gray-dabi;
+        margin-bottom: 5px;
+        margin-left: 10px;
+        font-weight: 600;
+        vertical-align: middle;
+    }
+
+    .add-button:hover {
+        background-color: $red-dabi;
+        font-weight: 600;
+    }
+
     .MuiDataGrid-columnHeaders {
         background-color: $table-header;
     }
