--- a/client/durandaltest/src/SCSS/Components/_modal.scss
+++ b/client/durandaltest/src/SCSS/Components/_modal.scss
@@ -9,3 +9,45 @@
     border: none;
     border-radius: 5px;
 }
+
+form .form-fields {
+    display: flex;
+    float: left;
+    justify-content: space-between;
+    
+
+
+    .input-container {
+        float: left;
+        width: 500px;
+        margin-bottom: 10px;
+        margin-right: 30px;
+        justify-content: space-between;    
+        font-family: $general-font;
+
+        .input-field {
+            height: 48px;
+            width: 100%;
+            outline: none;
+            border-radius: 5px;
+            text-indent: 10px;
+
+            &::placeholder {
+                font-size: 16px;
+            }
+
+            .role-options {
+                font-size: 16px;
+                border-radius: 5px;
+            }
+        }
+
+        .input-span {
+            color: $gray-dabi;
+            display: block;
+            font-weight: 700;
+            margin-bottom: 5px;
+            font-size: 20px;
+        }
+    }
+}
