Clients Add frontend + axios

--- a/client/durandaltest/src/SCSS/Components/_sidebar.scss
+++ b/client/durandaltest/src/SCSS/Components/_sidebar.scss
@@ -57,7 +57,7 @@
                 cursor: pointer;
 
                 &:hover {
-                    background-color: #F3F8FB;
+                    background-color: $hover;
                 }
 
                 .icon {
