--- a/client/durandaltest/src/SCSS/Components/_modal.scss
+++ b/client/durandaltest/src/SCSS/Components/_modal.scss
@@ -13,10 +13,10 @@
 form .form-fields {
     display: flex;
     float: left;
-    justify-content: space-between;
+    box-sizing: border-box;
+    width: 50%;
+    justify-content: center;
     
-
-
     .input-container {
         float: left;
         width: 500px;
@@ -30,15 +30,60 @@ form .form-fields {
             width: 100%;
             outline: none;
             border-radius: 5px;
+            border: 2px solid $gray-dabi;
             text-indent: 10px;
 
             &::placeholder {
                 font-size: 16px;
             }
 
-            .role-options {
+            .options {
                 font-size: 16px;
-                border-radius: 5px;
+                background-color: $background;
+            }
+        }
+
+        .input-span {
+            color: $gray-dabi;
+            display: block;
+            font-weight: 700;
+            margin-bottom: 5px;
+            font-size: 20px;
+        }
+    }
+}
+
+form .form-fields-client {
+    display: flex;
+    float: left;
+    justify-content: center;
+    box-sizing: border-box;
+    width: 100%;
+
+    .input-container {
+        float: left;
+        box-sizing: border-box;
+        width: 100%;
+        margin-bottom: 10px;
+        margin-right: 30px;
+        justify-content: space-between;    
+        font-family: $general-font;
+
+        .input-field {
+            height: 48px;
+            width: 80%;
+            outline: none;
+            border-radius: 5px;
+            border: 2px solid $gray-dabi;
+            text-indent: 10px;
+
+            &::placeholder {
+                font-size: 16px;
+            }
+
+            .options {
+                font-size: 16px;
+                background-color: $background;
             }
         }
 
