--- a/client/durandaltest/src/SCSS/Components/_modal.scss
+++ b/client/durandaltest/src/SCSS/Components/_modal.scss
@@ -1,5 +1,9 @@
 @import "../_variables.scss";
 
+.modal-backdrop {
+    opacity: 0;
+}
+
 .MuiAutocomplete-root {
     border-radius: 5px;
     border: 2px solid $gray-dabi;
