Delete modals updated, Client add modal form updated and feedback in add
- More detail in delete modal buttons
- Client add modal form divided in 2 sections: Business / Principal Contact
- Success and error toasts when adding users, clients, contacts and techs

PENDING:
- Delete axios implementation
- Delete showcase entry info prio delete

--- a/client/durandaltest/src/SCSS/Components/_datatable.scss
+++ b/client/durandaltest/src/SCSS/Components/_datatable.scss
@@ -44,12 +44,22 @@
             height: 18px;          
         }
 
+        .detail-add-icon {
+            cursor: pointer;
+            width: 20px;      
+            height: 20px;   
+        }
+
         #update-icon {
             color: $gray-dabi;
         }
 
         #delete-icon {
             color: $red-dabi;
+        }
+
+        #addcontact-icon {
+            color: $gray-dabi;
         }
 
         /*.vieweditButton {
