--- a/client/durandaltest/src/SCSS/Components/_modal.scss
+++ b/client/durandaltest/src/SCSS/Components/_modal.scss
@@ -9,6 +9,20 @@
     border: 2px solid $gray-dabi;
 }
 
+.modal-button {
+    width: 230px;
+    height: 40px;
+    font-family: $general-font;
+    background-color: $red-dabi;
+    color: white;
+    border: none;
+    border-radius: 5px;
+
+    &.no{
+        background-color: green;
+    }
+}
+
 .save-modal-button {
     width: 100px;
     height: 40px;
@@ -17,6 +31,16 @@
     color: white;
     border: none;
     border-radius: 5px;
+}
+
+.form-divider{
+    width: 100%;
+    height: 2px;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    border-radius: 1px;
+    background-color: rgb(184, 175, 175);
+    display: flex;
 }
 
 #large-form-field {
