--- a/client/durandaltest/src/SCSS/_variables.scss
+++ b/client/durandaltest/src/SCSS/_variables.scss
@@ -8,6 +8,7 @@
     src: url(../Media/Fonts/Quicksand/Quicksand-Regular.ttf);
 }
 
+
 $red-dabi: #dc1f0f;
 $gray-dabi: #4a4a4a;
 $background: #F5F6F8;
@@ -16,6 +17,9 @@ $hover: #f3f8fb;
 $primary-bars-color: #FFFFFF;
 
 $table-header: $background;
+
+/* || TEXTS */
+
 
 /* || LOGIN */
 $primary-background: #F6F5F7;
