Delete info showcase finished

--- a/client/durandaltest/src/SCSS/Components/_modal.scss
+++ b/client/durandaltest/src/SCSS/Components/_modal.scss
@@ -4,6 +4,11 @@
     opacity:0.5 !important;
 }
 
+.delete-info {
+    font-family: $general-font;
+    font-size: 18px;
+}
+
 .MuiAutocomplete-root {
     border-radius: 5px;
     border: 2px solid $gray-dabi;
