--- a/client/durandaltest/src/SCSS/Elements/_tables.scss
+++ b/client/durandaltest/src/SCSS/Elements/_tables.scss
@@ -8,3 +8,77 @@
         flex: 6;
     }
 }
+
+.button-container {
+    width: 100%;
+    text-align: center;
+}
+
+.save-button {
+    width: 200px;
+    height: 40px;
+    font-family: $general-font;
+    background-color: $red-dabi;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+form .form-fields {
+    display: flex;
+    float: left;
+    box-sizing: border-box;
+    width: 50%;
+    justify-content: center;
+    
+    .mini-input-container {
+        float: left;
+        width: 300px;
+        margin-bottom: 10px;
+        margin-right: 30px;
+        justify-content: space-between;    
+        font-family: $general-font;
+        text-align: center;
+
+        .input-field {
+            height: 35px;
+            width: 100%;
+            outline: none;
+            border-radius: 5px;
+            border: 2px solid $gray-dabi;
+            text-indent: 10px;
+
+            &::placeholder {
+                font-size: 16px;
+            }
+
+            .options {
+                font-size: 16px;
+                background-color: $background;
+            }
+        }
+
+        .input-span {
+            color: $gray-dabi;
+            display: block;
+            font-weight: 700;
+            margin-bottom: 5px;
+            font-size: 18px;
+        }
+    }
+}
+
+.divider{
+    width: 100%;
+    height: 2px;
+    margin-top: 8px;
+    border-radius: 1px;
+    background-color: rgb(184, 175, 175);
+    display: flex;
+}
+
+.clientinfo-container {
+    width: 100%;
+    text-align: center;
+    margin-top: 5px;
+}
