--- a/client/durandaltest/src/SCSS/Elements/_tables.scss
+++ b/client/durandaltest/src/SCSS/Elements/_tables.scss
@@ -30,43 +30,35 @@ form .form-fields {
     box-sizing: border-box;
     width: 50%;
     justify-content: center;
-    
-    .mini-input-container {
-        float: left;
-        width: 300px;
-        margin-bottom: 10px;
-        margin-right: 30px;
-        justify-content: space-between;    
-        font-family: $general-font;
-        text-align: center;
 
-        .input-field {
-            height: 35px;
-            width: 100%;
-            outline: none;
-            border-radius: 5px;
-            border: 2px solid $gray-dabi;
-            text-indent: 10px;
+    .input-field {
+        height: 35px;
+        width: 100%;
+        outline: none;
+        border-radius: 5px;
+        border: 2px solid $gray-dabi;
+        text-indent: 10px;
 
-            &::placeholder {
-                font-size: 16px;
-            }
-
-            .options {
-                font-size: 16px;
-                background-color: $background;
-            }
+        &::placeholder {
+            font-size: 16px;
         }
 
-        .input-span {
-            color: $gray-dabi;
-            display: block;
-            font-weight: 700;
-            margin-bottom: 5px;
-            font-size: 18px;
+        .options {
+            font-size: 16px;
+            background-color: $background;
         }
     }
+
+    .input-span {
+        color: $gray-dabi;
+        display: block;
+        font-weight: 700;
+        margin-bottom: 5px;
+        font-size: 18px;
+    }
 }
+
+// Client Info
 
 .divider{
     width: 100%;
@@ -77,8 +69,26 @@ form .form-fields {
     display: flex;
 }
 
-.clientinfo-container {
-    width: 100%;
+.update-client-form {
+    display: flex;
+    float: left;
+
+    .form-fields {
+        margin-left: 20px;
+    }
+    
+    span {
+        display: block;
+    }
+
+    .mini-input-container {
+        width: 300px;
+        font-family: $general-font;
+        display:inline-block;
+    }
+}
+
+.ci-button-container {
     text-align: center;
-    margin-top: 5px;
+    
 }
