Items & Equipments, PENDING equip add fix
READY
+ Items List
+ Equipment List
+ Item Modal Delete info
+ Equip Modal Delete info
+ Equip Modal input info
PENDING
+ Equip fix Modal endpoint functionality
+ Item Modal endpoint functionality
+ Item Modal input info
+ Item Modal Delete endpoint functionality
+ Equip Modal Delete endpoint functionality

--- a/client/durandaltest/src/SCSS/Components/_modal.scss
+++ b/client/durandaltest/src/SCSS/Components/_modal.scss
@@ -59,6 +59,17 @@
     
 }
 
+#description-field {
+    width: 100%;
+    .input-container {
+        width: 1050px;
+        .input-field{
+            width: 100%;
+            height: 80px;
+        }
+    }
+}
+
 form .form-fields {
     display: flex;
     float: left;
