Update modals init, PENDING fix endpoints (asset tested w/errors)

--- a/client/durandaltest/src/SCSS/Components/_modal.scss
+++ b/client/durandaltest/src/SCSS/Components/_modal.scss
@@ -38,6 +38,16 @@
     border-radius: 5px;
 }
 
+.update-modal-button {
+    width: 150px;
+    height: 40px;
+    font-family: $general-font;
+    background-color: $red-dabi;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
 .form-divider{
     width: 100%;
     height: 2px;
