Equip Form frontend fixed, Attributes datatable, EquipAtt Modal updated with tabs

--- a/client/durandaltest/src/SCSS/Components/_datatable.scss
+++ b/client/durandaltest/src/SCSS/Components/_datatable.scss
@@ -32,6 +32,12 @@
         font-weight: 600;
     }
 
+    .add-button:disabled {
+        background-color: #EBEBE4;
+        font-weight: 600;
+        color: black;
+    }
+
     .MuiDataGrid-columnHeaders {
         background-color: $table-header;
     }
