--- a/client/durandaltest/src/SCSS/Pages/_equipattr.scss
+++ b/client/durandaltest/src/SCSS/Pages/_equipattr.scss
@@ -4,31 +4,42 @@
     margin-bottom: 10px;
     font-family: $general-font;
     font-weight: 800;
+    font-size: 30px;
 }
 
 #equip-form-id {
     display: flex;
-    float: left;
 
     #description-field {
         width: 100%;
         .input-container {
-            width: 100%;
+            width: 600px;
             .input-field{
                 width: 100%;
-                height: 80px;
+                height: 160px;
             }
         }
+    }
+
+    .row {
+        display: flex;
+    }
+
+    .column {
+        flex: 50%;  
     }
     
     .form-fields {
         display: flex;
         float: left;
         box-sizing: border-box;
-        width: 35%;
         justify-content: center;
         margin-left: 10px;
-    
+
+        .input-container {
+            width: 600px;
+        }
+
         .input-field {
             height: 50px;
             width: 100%;
@@ -36,7 +47,7 @@
             border-radius: 5px;
             border: 2px solid $gray-dabi;
             text-indent: 10px;
-            margin-bottom: 5px;
+            margin-bottom: 0px;
     
             &::placeholder {
                 font-size: 16px;
@@ -59,6 +70,6 @@
 }
 
 .button-container {
-    margin-bottom: 30px;
+    margin-bottom: 5px;
 }
 
