Frontend adjusts, Update Site + Assets (all modals), PENDING endpoint implementation + EquipAtt quick access
Frontend adjusts:
- Sidebar search bar
- Outlined icons
- Datagrid toolbars

--- a/client/durandaltest/src/SCSS/Components/_datatable.scss
+++ b/client/durandaltest/src/SCSS/Components/_datatable.scss
@@ -2,7 +2,13 @@
 
 #datatable-att {
     height: 300px;
+    width: 100%;
 }
+
+#datatable-cc, #datatable-sites {
+    height: 400px;
+}
+
 
 .datatable {
     height: 600px;
