--- a/client/durandaltest/src/SCSS/Pages/_siteassets.scss
+++ b/client/durandaltest/src/SCSS/Pages/_siteassets.scss
@@ -7,68 +7,57 @@
     font-size: 20px;
 }
 
-#site-form-id {
-    display: flex;
-
-    #description-field {
-        width: 100%;
-        .input-container {
-            width: 500px;
-            .input-field{
-                width: 100%;
-                height: 142px;
-            }
-        }
-    }
-
-    .row {
-        display: flex;
-    }
-
-    .column {
-        flex: 50%;  
-    }
-    
-    .form-fields {
-        display: flex;
-        float: left;
-        box-sizing: border-box;
-        justify-content: center;
-        margin-left: 10px;
-
-        .input-container {
-            width: 600px;
-        }
-
-        .input-field {
-            height: 50px;
-            width: 100%;
-            outline: none;
-            border-radius: 5px;
-            border: 2px solid $gray-dabi;
-            text-indent: 10px;
-            margin-bottom: 0px;
-    
-            &::placeholder {
-                font-size: 16px;
-            }
-    
-            .options {
-                font-size: 16px;
-                background-color: $background;
-            }
-        }
-    
-        .input-span {
-            color: $gray-dabi;
-            display: block;
-            font-weight: 700;
-            margin-bottom: 5px;
-            font-size: 18px;
-        }
-    }
+.create-equip-icon {
+    font-size: 30px;
+    color: $gray-dabi;
 }
+
+.create-equip-icon:hover {
+    color: $red-dabi;
+}
+
+.sitea-container {
+    width: 100%;
+    height: 80vh;
+    
+
+    .site-form-container {
+
+        #site-form-id {
+            display: flex;
+
+            .site-form-column {
+                flex: 50%;
+            }
+
+            #sa-form-field {
+                width: 100%;
+                .input-container {
+                    width: 400px;
+                    .input-field{
+                        width: 100%;
+                    }
+                }
+            }
+
+            #large-form-field {
+                width: 100%;
+                .input-container {
+                    width: 100%;
+                    .input-field{
+                        width: 100%;
+                    }
+                }
+            }
+        }
+    }     
+}
+
 
 .button-container {
     margin-bottom: 2px;
+}
+
+.assets-container {
+    height: 1px;
 }
